# dantrumdotcom

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-cicd.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
api/: admin.py  birthdays.py  home.py  models.py  permissions.py  querysets.py  serializers.py  signals.py  tests.py  timeline.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20240523_1948.py  0002_auto_20240604_1632.py  0003_auto_20240605_1412.py  0004_auto_20240610_0837.py  0005_auto_20240613_1733.py  0006_alter_album_description.py  0007_alter_resource_description.py  0008_auto_20240702_0753.py  0009_auto_20240712_1157.py  0010_timelineevent_timelinealbumexclusion.py
api/tests/: test_models.py  test_permissions.py  test_serializers.py  test_views.py
dantrum/: asgi.py  pipeline.py  settings.py  urls.py  views.py  wsgi.py
dantrum/templates/: index.html  unverified.html
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  Scroll.css  index.css  main.tsx
frontend/src/api/: albums.ts  birthdays.ts  familyTree.ts  home.ts  quotes.ts  resources.ts  summary.ts  timeline.ts  timelineEvents.ts  user.ts  users.ts
frontend/src/components/: AlbumCard.tsx  AlbumModals.tsx  HomeRecentCarousel.tsx  ImageCarousel.tsx  MonthCell.tsx  Navbar.tsx  (+9 more)
scripts/: docker-cicd-entrypoint.sh  docker-entrypoint.dev.sh  docker-entrypoint.prod.sh  docker-entrypoint.sh  test-backend.sh
utils/: slack_notifications.py
(+32 files in other folders)
